--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -2,23 +2,22 @@
 # Release Notes for HugeSeq v1.2 #
 ##################################
 
-++++ 9/30/2013 ++++
+++++ 12/14/2013 ++++
 
-NOTE:  This is a beta release.  Several components have been modified in the package to accomodate the following changes.
+NOTE:  This is a beta release.  Several components have been modified in the package to accommodate the following changes.
 
 ## Tool "required" upgrades ##
 
-The follownig upgrades are "required" for HugeSeq-1.2 to operate properly:
+The following upgrades are "required" for HugeSeq-1.2 to operate properly:
 
 * BWA 0.5.9 -> 0.7.4
-* GATK 1.0.5506 -> > 2.5.2
-
+* GATK 1.0.5506 -> 2.8-1
 
 ## Tool "optional" upgrades ##
 The following upgrades are optional (Please note that the released file (~modulefiles/hugeseq/1.2) comes with the latest optional upgrades. In case any of the following items are not upgraded, please set appropriate versions in the modulefile.)
 
 * root -> 5.34.07
-* annovar -> 20130509
+* annovar -> 11122013 (Nov. 12, 2013)
 * bedtools -> 2.17.0
 * picard-tools -> 1.32
 * cnvnator -> 0.2.7
@@ -33,12 +32,13 @@ The following upgrades are optional (Please note that the released file (~module
 * Since the GATK upgrade to v>2.0 the following changes now in place:
 
 	- The "CountCovariates + TableRecalibration" (used in clean_recal.sh) is deprecated and replaced with "BaseRecalibrator +  PrintReads" using "GATK's best practices" recommendations.
-	- The input parameters corrsponding to SNP and indels are now unified into SNV (single nucleotide variations).  
+	- The input parameters corresponding to SNP and indels are now unified into SNV (single nucleotide variations).  
 	- var_snp.sh is replaced with var_gatk.sh and hardcoded paths to GATK is replaced with environment variables.
 	- Hardcoded paths to a GATK is changed in clean_realn.sh.
 
-* The GATK's new feature, Variant Quality Score Recalibration (VQSR), including "SelectVariants + VariantRecalibrator + ApplyRecalibration" for both SNPs and indels is implemented (in sv_vqsr.sh) and is a default option that follows genotyping. The feature can be turned off by an input patrameter (--novqsr). This application utilizes a number of known variations in various databases (explained below) to recalibrate the discovered SNVs. In our testing experiments we observed this feature to fail frequently. We therefore recommend users to consult GATK's help community to resolve persisting issues and change VQSR parameters in sv_vqrs.sh application accordingly.   
- 
+* The GATK's new feature, Variant Quality Score Recalibration (VQSR), including "SelectVariants + VariantRecalibrator + ApplyRecalibration" for both SNPs and indels is implemented (in sv_vqsr.sh) and is a default option that follows genotyping. The feature can be turned off by an input parameter (--novqsr). This application utilizes a number of known variations in various databases (explained below as part of GATK's best practices) to recalibrate the discovered SNVs. In our testing experiments we observed this feature to fail frequently. We therefore recommend users to consult GATK's help community to resolve persisting issues and change VQSR parameters in sv_vqrs.sh application accordingly.
+
+
 * Samtools is now deprecated for calling SNPs and indels.  These functions are now implemented by GATK.
 
 * The TMP directory (for storing intermediate files) previously set as an environment variable is now controlled by an input parameters (--TMP). The default for TMP is the output directory. 
@@ -50,6 +50,7 @@ The following upgrades are optional (Please note that the released file (~module
 	- The input BAM files can be used "as is" for calling SNVs and SVs, as well as annotations. Note that when a BAM is used "as is" for variation calling, GATK requires to use exactly the same reference genome used for alignment (need to edit $REF environment variable in the main module file). If this requirement is not met, GATK fails due to different ordering of contigs in the reference genome and the input BAM file.  
 	- The input BAM files can also undergo alignment (using BWA features to accept input BAM files) and then used for variation calling. 
 	
+* HugeSeq/1.2 is now requires an arbitrary character string as input for -account parameter. This parameters translates into "-A account" SGE parameter that stamps all associated jobs with the accounting string that may be used by SGE accounting purposes. 
 
 ## Required additional datasets ##
 
@@ -60,7 +61,7 @@ setenv VQSR_OMNI $dat_dir/hg19/1000G_omni2.hg19.vcf
 setenv VQSR_SNPS $dat_dir/hg19/1000G_phase1.snps.high_confidence.hg19.vcf
 setenv VQSR_INDELS $dat_dir/hg19/Mills_and_1000G_gold_standard.indels.hg19.vcf
 
-Therefore we recommend users to prepare these datasets by referring to:
+These are the datasets recommended as part of "GATK's best practices". We recommend users to prepare these datasets by referring to:
 	- http://www.broadinstitute.org/gatk/guide/article?id=39 and
 	- http://gatkforums.broadinstitute.org/discussion/1213/what-s-in-the-resource-bundle-and-how-can-i-get-it
 
